--- a/views/userAccount.html
+++ b/views/userAccount.html
@@ -86,7 +86,8 @@
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../styles/userAccount.css">
 
-    <script src="https://cdn.airswap.io/gallery/airswap-trader.js"></script>
+    <script src="https://cdn.airswap.io/airswap-instant-widget.js" async></script>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
     <!-- Title -->
     <title>CURATE</title>
@@ -228,10 +229,13 @@
                     </li>
                 </ul>
             </div>
+            <!-- <div class="twitter-panel">
+                <a class="twitter-timeline" data-theme="dark" href="https://twitter.com/curateproject?ref_src=twsrc%5Etfw">Tweets by curateproject</a>
+            </div> -->
             <div class="user-purchase-section">
-                <p class="user-section-header">Purchase tokens</p>
+                <!-- <p class="user-section-header">Purchase tokens</p> -->
                 <!-- <p class="coming-soon">Coming Soon</p> -->
-                <div class="user-ieo-link-section">
+                <!-- <div class="user-ieo-link-section">
                     <p>IEO Available on</p>
                     <div class="user-ieo-link-logos">
                         <a style="display:block" href="https://p2pb2b.io/token-sale/CUR8/1" target="_blank">
@@ -241,6 +245,10 @@
                             <img src="../img/main/airswap.svg">
                         </a>
                     </div>
+                </div> -->
+                <div class="twitter-panel">
+                    <a class="twitter-timeline" data-theme="dark"
+                        href="https://twitter.com/curateproject?ref_src=twsrc%5Etfw">Tweets by curateproject</a>
                 </div>
             </div>
             <div class="user-help-section">
