--- a/styles/main.css
+++ b/styles/main.css
@@ -2856,7 +2856,7 @@ a:not(.btn):hover {
     height: 375px;
     width: 100%;
     margin-top: 45px;
-    padding-top: 37px;
+    /* padding-top: 37px; */
     position: relative;
 }
 
