--- a/styles/userAccount.css
+++ b/styles/userAccount.css
@@ -1,3 +1,7 @@
+.container {
+    margin-right: 300px !important;
+}
+
 .form__input input {
     height: auto !important;
 }
@@ -60,6 +64,47 @@
     margin-right: 10px;
 }
 
+.twitter-panel {
+    height: 375px;
+    overflow-y: scroll;
+    border-radius: 16px;
+}
+
+.timeline-Widget {
+    background-color: transparent !important;
+}
+
+/* .twitter-panel {
+    position: fixed;
+    right: 0;
+    width: 280px;
+    top: 0;
+    overflow-y: scroll;
+    height: 100%;
+    z-index: 1;
+} */
+
+/* @media only screen and (max-width: 1413px) {
+    .container {
+        margin-right: 220px !important;
+    }
+
+    .twitter-panel {
+        width: 200px !important;
+    }
+}
+
+
+@media only screen and (max-width: 1333px) {
+    .container {
+        margin-right: auto !important;
+    }
+
+    .twitter-panel {
+        display: none !important;
+    }
+} */
+
 @media only screen and (max-width: 767px) {
     .form__section .container {
         padding-top: 20px !important;
@@ -102,7 +147,7 @@
     .user-nav__item {
         width: 150px;
     }
-    
+
     .user-account-header > li {
         margin-right: auto !important;
     }
