Twitter panel centered

--- a/styles/userAccount.css
+++ b/styles/userAccount.css
@@ -65,45 +65,47 @@
 }
 
 .twitter-panel {
-    height: 375px;
-    overflow-y: scroll;
+    background: #0e0b12;
     border-radius: 16px;
-}
-
-.timeline-Widget {
-    background-color: transparent !important;
-}
-
-/* .twitter-panel {
-    position: fixed;
-    right: 0;
-    width: 280px;
-    top: 0;
+    height: 375px !important;
+    width: 100%;
+    margin-top: 16px;
+    position: relative;
     overflow-y: scroll;
-    height: 100%;
-    z-index: 1;
-} */
-
-/* @media only screen and (max-width: 1413px) {
-    .container {
-        margin-right: 220px !important;
-    }
-
-    .twitter-panel {
-        width: 200px !important;
-    }
+    overflow-x: hidden;
 }
 
+iframe {
+    -ms-zoom: 0.75;
+    -moz-transform: scale(0.75);
+    -moz-transform-origin: 0 0;
+    -o-transform: scale(0.75);
+    -o-transform-origin: 0 0;
+    -webkit-transform: scale(0.75);
+    -webkit-transform-origin: 0 0;
+    margin-left: 12.5%;
+}
 
-@media only screen and (max-width: 1333px) {
-    .container {
-        margin-right: auto !important;
-    }
+.twitter-panel::-webkit-scrollbar {
+    width: 10px;
+}
 
-    .twitter-panel {
-        display: none !important;
-    }
-} */
+/* Track */
+.twitter-panel::-webkit-scrollbar-track {
+    background: rgba(64, 73, 80, 20%);
+    border-radius: 0px 16px 16px 0px;
+}
+
+/* Handle */
+.twitter-panel::-webkit-scrollbar-thumb {
+    background: #555;
+    border-radius: 0px 4px 4px 0px;
+}
+
+/* Handle on hover */
+.twitter-panel::-webkit-scrollbar-thumb:hover {
+    background: #ffd788;
+}
 
 @media only screen and (max-width: 767px) {
     .form__section .container {
