--- a/styles/main.css
+++ b/styles/main.css
@@ -2673,7 +2673,6 @@ a:not(.btn):hover {
 
 .audit-container {
     color: #FFAE38;
-   
     display: flex;
     align-items: center;
     background-color: #100C13;
@@ -2853,10 +2852,10 @@ a:not(.btn):hover {
 .user-purchase-section {
     background: #0e0b12;
     border-radius: 16px;
-    height: 375px;
+    height: 150px;
     width: 100%;
     margin-top: 45px;
-    /* padding-top: 37px; */
+    padding-top: 10px;
     position: relative;
 }
 
