--- a/views/userAccount.html
+++ b/views/userAccount.html
@@ -233,9 +233,9 @@
                 <a class="twitter-timeline" data-theme="dark" href="https://twitter.com/curateproject?ref_src=twsrc%5Etfw">Tweets by curateproject</a>
             </div> -->
             <div class="user-purchase-section">
-                <!-- <p class="user-section-header">Purchase tokens</p> -->
+                <p class="user-section-header">Purchase tokens</p>
                 <!-- <p class="coming-soon">Coming Soon</p> -->
-                <!-- <div class="user-ieo-link-section">
+                <div class="user-ieo-link-section">
                     <p>IEO Available on</p>
                     <div class="user-ieo-link-logos">
                         <a style="display:block" href="https://p2pb2b.io/token-sale/CUR8/1" target="_blank">
@@ -245,11 +245,11 @@
                             <img src="../img/main/airswap.svg">
                         </a>
                     </div>
-                </div> -->
-                <div class="twitter-panel">
-                    <a class="twitter-timeline" data-theme="dark"
-                        href="https://twitter.com/curateproject?ref_src=twsrc%5Etfw">Tweets by curateproject</a>
                 </div>
+            </div>
+            <div class="twitter-panel">
+                <a class="twitter-timeline" data-theme="dark"
+                    href="https://twitter.com/curateproject?ref_src=twsrc%5Etfw">Tweets by curateproject</a>
             </div>
             <div class="user-help-section">
                 <p class="user-section-header">We have prepared detailed instructions for you:</p>
