New exchange logos, correct link to pdf in user acc, updated roadmap

--- a/views/userAccount.html
+++ b/views/userAccount.html
@@ -262,7 +262,7 @@
                                 fill="#FFD788" />
                         </svg>
                         <div class="user-help-label">How to create an Ethereum wallet to get tokens</div>
-                        <a href="../CreateWallet.pdf" target="_blank" class="user-help-link">Download</a>
+                        <a href="../createwallet.pdf" target="_blank" class="user-help-link">Download</a>
                     </div>
                     <div>
                         <svg class="float-left" width="38" height="90" viewBox="0 0 38 90" fill="none"
