--- a/styles/userAccount.css
+++ b/styles/userAccount.css
@@ -7,31 +7,31 @@
 }
 
 .user-ieo-link-section {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+   /* position: absolute;*/
+    bottom: 20%;
 }
 
 .user-ieo-link-section > p {
-    text-align: center;
-    /* font-size: 18px; */
-    color: white;
+    color: #5C8487;
     text-transform: uppercase;
+    margin-left:35px;
 }
 
 .user-ieo-link-logos {
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
+    padding-bottom: 25px;
 }
 
 .user-nav__item {
-    margin-right: auto !important;
+    width:auto;
+    /*margin-right: auto !important;*/
 }
 
 .user-account-header {
-    display: grid;
-    grid-template-columns: repeat(4, 200px);
+    display: flex;
+    flex-direction:row;
+    flex-wrap:wrap;
     align-items: center;
     justify-content: flex-start;
 }
@@ -40,6 +40,13 @@
     align-items: center;
     margin-right: 60px !important;
 }
+
+/*.user-account-header > li:last-child {
+    position:relative;
+    text-align:right;
+    margin-left:300px!important;
+    margin-right:0!important;
+}*/
 
 .light-label {
     margin-right: auto !important;
@@ -65,7 +72,7 @@
 }
 
 .twitter-panel {
-    background: #0e0b12;
+    background: #001C1E;
     border-radius: 16px;
     height: 375px !important;
     width: 100%;
@@ -136,21 +143,21 @@ iframe {
         display: none !important;
     }
 
-    .user-nav__item {
+/*    .user-nav__item {
         width: 150px;
-    }
+    }*/
 }
 
 @media only screen and (max-width: 450px) {
-    .user-nav__item {
+    /*.user-nav__item {
         width: auto;
     }
 
     .user-nav__item {
         width: 150px;
-    }
+    }*/
 
     .user-account-header > li {
-        margin-right: auto !important;
+        /*margin-right: auto !important;*/
     }
 }
