--- a/views/userAccount.html
+++ b/views/userAccount.html
@@ -247,10 +247,10 @@
                     </div>
                 </div>
             </div>
-           <!--  <div class="twitter-panel">
+            <div class="twitter-panel">
                 <a class="twitter-timeline" data-theme="dark"
-                    href="https://twitter.com/curateproject?ref_src=twsrc%5Etfw">Tweets by curateproject</a>
-            </div> -->
+                    href="https://twitter.com/curatestyle?ref_src=twsrc%5Etfw">Tweets by curatestyle</a>
+            </div>
             <div class="user-help-section">
                 <p class="user-section-header">We have prepared detailed instructions for you:</p>
                 <div class="user-section-container">
