--- a/styles/main.css
+++ b/styles/main.css
@@ -1038,6 +1038,11 @@ div.menu li.animate:nth-of-type(6) {
     margin-right: 0;
 }
 
+#demo .roadmap__wrap:before {
+    height:0px;
+    background:none;
+}
+
 .btn {
     transition: 0.3s ease-in-out;
     display: block;
