--- a/views/userAccount.html
+++ b/views/userAccount.html
@@ -229,9 +229,6 @@
                     </li>
                 </ul>
             </div>
-            <!-- <div class="twitter-panel">
-                <a class="twitter-timeline" data-theme="dark" href="https://twitter.com/curateproject?ref_src=twsrc%5Etfw">Tweets by curateproject</a>
-            </div> -->
             <div class="user-purchase-section">
                 <p class="user-section-header">Purchase tokens</p>
                 <!-- <p class="coming-soon">Coming Soon</p> -->
@@ -247,10 +244,10 @@
                     </div>
                 </div>
             </div>
-           <!--  <div class="twitter-panel">
+            <div class="twitter-panel">
                 <a class="twitter-timeline" data-theme="dark"
                     href="https://twitter.com/curateproject?ref_src=twsrc%5Etfw">Tweets by curateproject</a>
-            </div> -->
+            </div>
             <div class="user-help-section">
                 <p class="user-section-header">We have prepared detailed instructions for you:</p>
                 <div class="user-section-container">
