--- a/views/login.html
+++ b/views/login.html
@@ -93,15 +93,20 @@
     <title>CURATE</title>
 
     <script>
+        var captchaWidgetId = null;
+        var captchaToken = null;
+
         var captchaSuccess = function () {
-            //TODO: Add callback and store response token
+            captchaToken = grecaptcha.getResponse(captchaWidgetId);
+            console.log('g-recaptcha-response: ' + captchaToken);
+            validateEntries();
         }
 
         var onReCaptchaLoad = function () {
-            var captchaWidgetId = grecaptcha.render('captcha', {
+            captchaWidgetId = grecaptcha.render('captcha', {
                 'sitekey': '6LeOYroUAAAAAOjTfp0dWLiqGXsRyUFk2qWOHcDJ',  // required
                 'theme': 'dark',  // optional
-                // 'callback': 'verifyCallback'  // optional
+                'callback': 'captchaSuccess'  // optional
             });
         };
 
