--- a/views/userAccount.html
+++ b/views/userAccount.html
@@ -241,9 +241,9 @@
                         <a id="airswap">
                             <img src="../img/main/airswap.svg">
                         </a>
-                        <a style="display:block" href="https://p2pb2b.io/token-sale/CUR8/1" target="_blank">
+                       <!--  <a style="display:block" href="https://p2pb2b.io/token-sale/CUR8/1" target="_blank">
                             <img src="../img/main/p2pb2b.svg">
-                        </a>
+                        </a> -->
                     </div>
                 </div>
             </div>
